--- a/src/views/error.pug
+++ b/src/views/error.pug
@@ -1,1 +1,9 @@
-h1= message
+extends base
+
+block content
+  main.main
+    .error
+      .error__title
+        h2.heading-secondary.heading-secondary--error Uh oh! Something went wrong!   
+        h2.error__emoji 😢 🤯
+      .error__msg=message 
